<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titulomolderes"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ftres"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@color/blueviolet"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ftres"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@+id/titulomolderes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/resta"

        />
    <TextView
        android:id="@+id/descripcion"

        app:layout_constraintTop_toBottomOf="@+id/ftres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/precio"
        android:text="@string/descriresta"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/precio"

        app:layout_constraintTop_toBottomOf="@+id/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/precioresta"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</android.support.constraint.ConstraintLayout>