<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:id="@+id/ft1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tito"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/siiitooo"
        app:layout_constraintVertical_bias="0.3"

        />

    <TextView
        android:id="@+id/tito"
        app:layout_constraintTop_toBottomOf="@+id/ft1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tel"
        android:text="@string/titulositio"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/blueviolet"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tel"
        app:layout_constraintTop_toBottomOf="@+id/tito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/precio"
        android:text="@string/telesitio"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/precio"
        app:layout_constraintTop_toBottomOf="@+id/tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/preciositio"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>