<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonuevo"
    tools:context=".Home">

    <TextView
        android:id="@+id/titulo"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="VENECIA"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/botonhoteles"
        android:text="@string/botonhoteles"
        android:textColor="@color/white"
        android:background="@drawable/botonredondo"
        android:textSize="22dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/botonrestaurantes"
        android:text="@string/botonrestaurantes"
        android:textColor="@color/white"
        android:background="@drawable/botonredondo"
        android:textSize="22dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/botonhoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/botonturismo"
        android:text="@string/botonturismo"
        android:textColor="@color/white"
        android:background="@drawable/botonredondo"
        android:textSize="22dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/botonrestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>








</android.support.constraint.ConstraintLayout>